--- a/findly-builder/src/app/components/faq-source/faq-source.component.scss
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.scss
@@ -193,7 +193,14 @@
                         background: #F8F9FA;
                         padding: 8px 20px;                    
                         .kr-sg-input-search{
-                            width:56%;
+                            width: 215px;
+                            position: relative;
+                            .close-icon{
+                                position: absolute;
+                                right: 11px;
+                                top: 12px;
+                                cursor: pointer;
+                            }
                             .input-search{
                                 border: 1px solid #E4E5E7;                            
                                 border-radius: 4px;
