--- a/findly-builder/src/app/components/usage-log/usage-log.component.html
+++ b/findly-builder/src/app/components/usage-log/usage-log.component.html
@@ -46,16 +46,16 @@
                             <img  [ngClass]="getSortIconVisibility('queryType', 'up')" src="assets/icons/caretDown.svg" class="ml-1 sortImg upArrow">
                           </span>
                         Type 
-                        <div class="ml-2 kr-sg-dropdowns type_sort_dropdown" #sourceFilter="ngbDropdown" ngbDropdown [container]="'body'" [autoClose]="true" [placement]="'bottom-right'">
+                        <div class="ml-2 kr-sg-dropdowns type_sort_dropdown" #queryTypeFilter="ngbDropdown" ngbDropdown [container]="'body'" [autoClose]="true" [placement]="'bottom-right'">
                             <div class="dropdown dropdown-open">
                                 <button class="dropdown-toggle dropdown-input" ngbDropdownToggle (click)="$event.stopImmediatePropagation()">                 
                                     <img class="custom-dropdown-toggle-icon" src="assets/icons/Vector.svg">
                                 </button>
                                 <ul class="dropdown-menu content-menu type_sort_dropdown-content" ngbDropdownMenu>
-                                    <li  (click)="sourceFilter.close();filterTable('all','queryType')">
+                                    <li  (click)="queryTypeFilter.close();filterTable('all','queryType')">
                                         <span class="list-name" >All</span>
                                         <img [ngClass]="{'hide': filterSystem.queryTypeFilter !== 'all'}" src="assets/icons/check-blue.svg"></li>
-                                        <li *ngFor="let queryType of queryTypeArr" (click)="sourceFilter.close();filterTable(queryType,'queryType')">
+                                        <li *ngFor="let queryType of queryTypeArr" (click)="queryTypeFilter.close();filterTable(queryType,'queryType')">
                                             <span
                                               class="list-name">{{queryType}}</span><img
                                               [ngClass]="{'hide': filterSystem.queryTypeFilter !== queryType}" src="assets/icons/check-blue.svg"></li>                        
@@ -92,16 +92,16 @@
                             <img  [ngClass]="getSortIconVisibility('results', 'up')" src="assets/icons/caretDown.svg" class="ml-1 sortImg upArrow">
                           </span>
                           RESULTS 
-                          <div class="ml-2 kr-sg-dropdowns type_sort_dropdown" #sourceFilter="ngbDropdown" ngbDropdown [container]="'body'" [autoClose]="true" [placement]="'bottom-right'">
+                          <div class="ml-2 kr-sg-dropdowns type_sort_dropdown" #resultsFilter="ngbDropdown" ngbDropdown [container]="'body'" [autoClose]="true" [placement]="'bottom-right'">
                             <div class="dropdown dropdown-open">
                                 <button class="dropdown-toggle dropdown-input" ngbDropdownToggle (click)="$event.stopImmediatePropagation()">                 
                                     <img class="custom-dropdown-toggle-icon" src="assets/icons/Vector.svg">
                                 </button>
                                 <ul class="dropdown-menu content-menu type_sort_dropdown-content" ngbDropdownMenu>
-                                    <li (click)="sourceFilter.close();filterTable('all','results')">
+                                    <li (click)="resultsFilter.close();filterTable('all','results')">
                                         <span class="list-name">All</span>
                                         <img [ngClass]="{'hide': filterSystem.resultsFilter !== 'all'}" src="assets/icons/check-blue.svg"></li>
-                                        <li *ngFor="let docType of resultsArr" (click)="sourceFilter.close();filterTable(docType,'results')">
+                                        <li *ngFor="let docType of resultsArr" (click)="resultsFilter.close();filterTable(docType,'results')">
                                             <span
                                                 class="list-name">{{docType == false ? 'No' :(docType == true? 'Yes': '')}}</span><img
                                                 [ngClass]="{'hide': filterSystem.resultsFilter !== docType}" src="assets/icons/check-blue.svg"></li>                       
