--- a/findly-builder/src/app/components/add-source/add-source.component.scss
+++ b/findly-builder/src/app/components/add-source/add-source.component.scss
@@ -1470,6 +1470,14 @@
                     font-size: 14px;
                     line-height: 14px;
                 }
+                .info_help_text{
+                    color: #07377F;
+                    font-size: 12px;
+                    line-height: 18px;
+                    font-weight: normal;
+                    font-family: Inter;
+                    font-style: normal;
+                }
                 .or-divider{
                     color: #898989;
                     font-weight: normal;
