--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -62,6 +62,7 @@
     </div>
   </div> -->
   <div class="table-list-content" *ngIf="resources && resources.length && !loadingContent">
+    <app-useronboarding-journey [componentType]='componentType'></app-useronboarding-journey>
     <div class="kr-sg-data-table with-checkbox">
       <div class="table-action-header">
         <div class="title-main">
