--- a/findly-builder/src/app/components/pricing/pricing.component.html
+++ b/findly-builder/src/app/components/pricing/pricing.component.html
@@ -278,7 +278,7 @@
   </perfect-scrollbar>
   <div class="modal-footer text-right">
     <button class="kr-sg-button-primary btn_lg mr-3" [disabled] = "!addDocOver && !addQueOver" (click)="compare('orderOverage')">Proceed</button>
-    <button class="kr-sg-button-secondary backbtn btn_md mr-2" (click)="cancelOveragePopup()">Cancel</button>
+    <button class="kr-sg-button-secondary backbtn btn_md mr-2" (click)="closeOveragePopup()">Cancel</button>
   </div>`1  
 </kr-modal>
 
