--- a/findly-builder/src/app/components/general-settings/general-settings.component.html
+++ b/findly-builder/src/app/components/general-settings/general-settings.component.html
@@ -3,7 +3,7 @@
     <perfect-scrollbar class="action-body-scroll">
         <div class="settings-general-data">
             <app-actions></app-actions>
-            <app-small-talk> </app-small-talk>
+            <app-small-talk class="d-none"> </app-small-talk>
         </div>
     </perfect-scrollbar>      
 </div>
