--- a/findly-builder/src/app/components/settings/settings.component.html
+++ b/findly-builder/src/app/components/settings/settings.component.html
@@ -36,14 +36,23 @@
         </div>
         <div class="card_data row m-0">
             <div class="card-content active" *ngFor=" let channel of channels | filter: [ searchchannel , 'name']">
-                <div class="dropdown kr-sg-overflow-menu" *ngIf="channel.enable">
-                    <div class="dropdown-toggle" id="menu1" data-toggle="dropdown"><img class="action_icon"
+                <div class="kr-sg-dropdowns w-auto exportdropdown" ngbDropdown [container]="'body'" [placement]="'bottom-right'" *ngIf="channel.enable">                                        
+                    <div class="dropdown dropdown-open">
+                        <button class="dropdown-toggle  p-0 border-0" ngbDropdownToggle><img src="assets/icons/elipse.svg"></button>                                            
+                        <ul class="dropdown-menu content-menu faq-filter-add" ngbDropdownMenu>
+                            <li><a (click)="enableConfiguration = !enableConfiguration">{{enableConfiguration?'Disable':'Enable'}}</a></li>
+                            <li><a>Delete </a></li>               
+                        </ul>
+                    </div>
+                </div>
+                <!-- <div class="dropdown kr-sg-overflow-menu" *ngIf="channel.enable">
+                    <div class="dropdown-toggle" id="menu1" data-toggle="dropdown" ><img class="action_icon" 
                             src="assets/icons/elipse-black.svg"></div>
-                    <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+                    <ul class="dropdown-menu" role="menu" aria-labelledby="menu1" ngbDropdownMenu>
                         <li><a (click)="enableConfiguration = !enableConfiguration">{{enableConfiguration?'Disable':'Enable'}}</a></li>
                         <li><a>Delete </a></li>
                     </ul>
-                </div>
+                </div> -->
                 <div class="main" (click)="proceedChannel(channel)">
                     <div class="img-block"><img src="{{channel.icon}}"></div>
                     <div class="main-title">{{channel.name}}</div>
