--- a/findly-builder/src/app/components/settings/settings.component.scss
+++ b/findly-builder/src/app/components/settings/settings.component.scss
@@ -124,6 +124,11 @@
             }
         }
         .card_data{
+            .dropdown-toggle{
+                background: #F8F9FA;
+                margin-bottom: 35px;
+                margin-left: 195px;
+            }
             .card-content{
                 background: #FFFFFF;
                 box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2);
@@ -530,6 +535,11 @@
             }
         }
     }
+}
+.kr-sg-dropdowns.exportdropdown .dropdown-open .dropdown-input{
+    // background-image: unset;
+    margin-bottom:10px ;
+    margin-left: 200px;
 }
 ::ng-deep .view-query-modal{
     .switch-toggle{
