--- a/findly-builder/src/app/components/search-experience/search-experience.component.html
+++ b/findly-builder/src/app/components/search-experience/search-experience.component.html
@@ -415,7 +415,7 @@
                             </div>
                         </div>
 
-                        <div class="col-12 preview-search-ex">
+                        <div class="col-12 preview-search-ex" style="pointer-events: none;">
                             <div class="search-widget-if-bottom-up" *ngIf="searchObject.searchExperienceConfig.searchBarPosition == 'bottom'">                               
                                 <div class="greeting-block">
                                     <img [src]="emojiIcon">
