--- a/findly-builder/src/app/components/dashboard/dashboard.component.html
+++ b/findly-builder/src/app/components/dashboard/dashboard.component.html
@@ -329,7 +329,7 @@
             </div>
             <div class="data-information-content col-12 m-0 row split-tables">
                 <div class="col-6 box-content">
-                    <div class="full-card pb-4"  [ngStyle]="{'opacity':isyAxisMostClickPostiondata?'none':'0.3','pointer-events':isyAxisMostClickPostiondata?'auto':'none'}">
+                    <div class="full-card pb-4"  [ngStyle]="{'opacity':isyAxisMostClickPostiondata?'unset':'0.3','pointer-events':isyAxisMostClickPostiondata?'auto':'none'}">
                         <div class="title-card">{{'metrics.dash_board_view.Most_Clicked_Position'| translate}}
                             <img src="assets/icons/gray_info.svg" placement="top-center" ngbTooltip="Position at which the search results were clicked on by the end - users most number of times." [container]="'body'" tooltipClass="dashboard-custom-tooltips" class="pl-1">
                         </div>
