--- a/findly-builder/src/app/components/invoices/invoices.component.html
+++ b/findly-builder/src/app/components/invoices/invoices.component.html
@@ -51,7 +51,7 @@
                     <div class="title col-3">{{invoice.subscriptionDetails?.startDate  | dateFormatPipe: 'DD MMM YYYY'}} - {{invoice.subscriptionDetails?.endDate  | dateFormatPipe: 'DD MMM YYYY'}}</div>
                     <div class="title col-2">$ {{invoice.amount}}</div>
                     <div class="title col-2">{{invoice.subscriptionType}}</div>
-                    <div class="title col-3">{{invoice.invoiceCreatedDate  | dateFormatPipe: 'DD MMM YYYY'}}</div>
+                    <div class="title col-3 pl-4">{{invoice.invoiceCreatedDate  | dateFormatPipe: 'DD MMM YYYY'}}</div>
                     <div class="actions-invoice">
                         <!-- <div class="view"> <a href="{{invoice.viewInvoice}}" target="_blank"><img src="assets/icons/usage-log/view.svg"></a></div> -->
                         <div class="download-invoice"><a type="button" (click)="downloadInvoice(invoice.viewInvoice,invoice._id)"><img src="assets/icons/usage-log/download.svg"></a></div>
