--- a/findly-builder/src/app/components/synonyms/synonyms.component.scss
+++ b/findly-builder/src/app/components/synonyms/synonyms.component.scss
@@ -72,12 +72,34 @@
                 .kr-sg-input-text{
                     width: 300px;
                     right: 10px;
-                    width: 0px;
-                    display: none; 
                     position: relative;
                     &.active{
                         display: block;
                         width: 300px;
+                    }
+                    .close-icon{
+                        position: absolute;
+                        right: 11px;
+                        top: 12px;
+                        cursor: pointer;
+                    }
+                    .input-search{
+                        border: 1px solid #E4E5E7;                            
+                        border-radius: 4px;
+                        padding-left: 36px;
+                        padding-right: 15px;
+                        font-size: 14px;
+                        &:focus{
+                            border: 1px solid #1372ff;
+                        }
+                        &::placeholder{
+                            color: #BDC1C6;
+                        }
+                    }
+                    .search-icon{
+                        left: 12px;
+                        top: 10px;
+                        position: absolute;
                     }
                 }
                 .seach-block{
