rules, fields, stopwords, structured data search input fields pattern code changes

--- a/findly-builder/src/app/components/stop-words/stop-words.component.html
+++ b/findly-builder/src/app/components/stop-words/stop-words.component.html
@@ -80,15 +80,16 @@
         <div class="col-5 p-0" >
           <div class="desc-info-text" *ngIf="searchStopwords">{{'Showing ' + getActiveSearch()  +' results for ‘'+ searchStopwords  +'’'}}</div>
         </div>         
-        <div class="col-7 p-0 d-flex align-items-center justify-content-end">
-          <div class="kr-sg-input-search m-0" [ngClass]="{'active': showSearch}">                               
-            <input type="text" placeholder="Search" autocomplete="off" class="input-search" name='searchSources' placeholder="Search" id="searchSynonymsId" [(ngModel)]="searchStopwords" maxlength="50">           
-          </div> 
-          <div class="searchBlock" (click)="toggleSearch()" *ngIf="(stopwords && stopwords.length)">
-            <img *ngIf="showSearch" class="search-icon" src="assets/images/close.svg">
-            <img *ngIf="!showSearch" class="search-icon" src="assets/icons/search_black.svg">
-            <span *ngIf="!showSearch" class="label_txt">{{'stopWords.Search'| translate}}</span>
-          </div>  
+        <div class="col-7 p-0 d-flex align-items-center justify-content-end"> 
+          <div class="kr-sg-input-search m-0"  [ngClass]="{'d-none': !showSearch}">                               
+            <input type="text" placeholder="Search" class="input-search"  [ngClass]="{'pl-33':!searchStopwords,'pl-2':searchStopwords}" autocomplete="off" [(ngModel)]="searchStopwords" (focusout)="showSearch= !showSearch;" maxlength="50" (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
+            (mouseout)="searchFocusIn=false;searchImgSrc = 'assets/icons/search_gray.svg'" (focus)="searchFocusIn=true;searchImgSrc = 'assets/icons/search_gray.svg'">
+        <img [src]="searchImgSrc" class="search-icon" *ngIf="!searchStopwords">
+        <img class="close-icon" *ngIf="searchStopwords" src="assets/icons/close_icon.svg" [ngClass]="{'pr-22':searchStopwords}" (click)="searchStopwords='';showSearch=!showSearch;"  placement="top-center" container='body' ngbTooltip="Cancel" tooltipClass="ngb_tooltip_custom_class sampleJson">
+        </div> 
+          <div class="searchBlock" (click)="showSearch=!showSearch;" *ngIf="(stopwords && stopwords.length)">
+            <span [ngClass]="{'d-none': showSearch}" class="mr-3" id="btn_toggle_search_structured_data" ><img src="assets/icons/search.svg" [ngClass]="{'d-none': showSearch}">{{'search' | translate}}</span>
+        </div>
           <div class="kr-sg-dropdowns w-auto exportdropdown" ngbDropdown [container]="'body'" [placement]="'bottom-right'">                                        
             <div class="dropdown dropdown-open">
                 <button class="dropdown-toggle dropdown-input p-0 border-0" ngbDropdownToggle><img src="assets/icons/elipse.svg"></button>                                            
