--- a/findly-builder/src/app/components/field-management/field-management.component.html
+++ b/findly-builder/src/app/components/field-management/field-management.component.html
@@ -8,10 +8,20 @@
             <div class="seach_add_feild">
                 <div class="title">Fields</div>
                 <div class="d-flex align-items-center">
-                    <div class="kr-sg-input-search m-0" [ngClass]="{'active': showSearch}">                               
-                        <input type="text" placeholder="Search" autocomplete="off" class="input-search" name='searchSources' placeholder="Search" id="fieldSearchId" [(ngModel)]="searchFields">           
-                    </div> 
-                    <div class="seach-block" (click)="toggleSearch()"><img *ngIf="!showSearch" src="assets/icons/search.svg"><img *ngIf="showSearch" src="assets/images/close.svg">Search</div>
+                    <div class="kr-sg-input-search m-0" [ngClass]="{'d-none': !showSearch}">
+                        <input type="text" placeholder="Search" class="input-search" [ngClass]="{'pl-33':!searchFields,'pl-2':searchFields}"
+                            autocomplete="off" id="fieldSearchId" [(ngModel)]="searchFields" (focusout)="showSearch= !showSearch;"
+                            (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
+                            (mouseout)="searchFocusIn=false;searchImgSrc = 'assets/icons/search_gray.svg'"
+                            (focus)="searchFocusIn=true;searchImgSrc = 'assets/icons/search_gray.svg'">
+                        <img [src]="searchImgSrc" class="search-icon" *ngIf="!searchFields">
+                        <img class="close-icon" *ngIf="searchFields" src="assets/icons/close_icon.svg" [ngClass]="{'pr-22':searchFields}"
+                            (click)="searchFields='';showSearch=!showSearch;" placement="top-center" container='body' ngbTooltip="Cancel"
+                            tooltipClass="ngb_tooltip_custom_class sampleJson">
+                    </div>
+                    <div class="seach-block" (click)="showSearch=!showSearch;">
+                        <span [ngClass]="{'d-none': showSearch}" class="mr-3" id="btn_toggle_search_structured_data" ><img src="assets/icons/search.svg" [ngClass]="{'d-none': showSearch}">{{'search' | translate}}</span>
+                    </div>
                     <div class="add_feild" (click)="addEditFiled()"><img src="assets/icons/add_plus.svg">Add Field</div>
                 </div>
             </div> 
