--- a/findly-builder/src/app/components/credentials-list/credentials-list.component.html
+++ b/findly-builder/src/app/components/credentials-list/credentials-list.component.html
@@ -21,10 +21,19 @@
     <div class="header-sec col-12 row m-0"  *ngIf="(channnelConguired && channnelConguired.length)">
         <div class="col-4 p-0 title-header"> Manage Credentials</div>
          <div class="col-8 right-sec p-0">            
-                <div class="kr-sg-input-text m-0" [ngClass]="{'active': showSearch}">
+                <!-- <div class="kr-sg-input-text m-0" [ngClass]="{'active': showSearch}">
                     <input type="text" placeholder="Search" autocomplete="off" class="input-search" placeholder="Search" [(ngModel)]="searchcredential">
                 </div>
                 <div class="seach-block"  (click)="toggleSearch()"><img *ngIf="!showSearch" src="assets/icons/search.svg"><img  *ngIf="showSearch" src="assets/images/close.svg" >Search
+                </div> -->
+                <div class="kr-sg-input-search m-0"  [ngClass]="{'d-none': !showSearch}">                               
+                    <input type="text" placeholder="Search" class="input-search"  [ngClass]="{'pl-33':!searchcredential,'pl-2':searchcredential}" autocomplete="off" [(ngModel)]="searchcredential" (focusout)="showSearch= !showSearch;" maxlength="50" (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
+                    (mouseout)="searchFocusIn=false;searchImgSrc = 'assets/icons/search_gray.svg'" (focus)="searchFocusIn=true;searchImgSrc = 'assets/icons/search_gray.svg'">
+                <img [src]="searchImgSrc" class="search-icon" *ngIf="!searchcredential">
+                <img class="close-icon" *ngIf="searchcredential" src="assets/icons/close_icon.svg" [ngClass]="{'pr-22':searchcredential}" (click)="searchcredential='';showSearch=!showSearch;"  placement="top-center" container='body' ngbTooltip="Cancel" tooltipClass="ngb_tooltip_custom_class sampleJson">
+                </div> 
+                  <div class="seach-block" (click)="showSearch=!showSearch;">
+                    <span [ngClass]="{'d-none': showSearch}" class="mr-3" id="btn_toggle_search_structured_data" ><img src="assets/icons/search.svg" [ngClass]="{'d-none': showSearch}">{{'search' | translate}}</span>
                 </div>
                 <div class="add_feild" (click)="newCredential()"><img src="assets/icons/add_plus.svg" >Add Credential
                 </div>
